# sim_localization

./: CMakeLists.txt  package.xml
include/sim_local/: LinK3D_extractor.h  Particle_filter.hpp  frame_dumper.hpp  kdtree.hpp  localization_node.hpp  map_combined_node.hpp  nclt_local.hpp  nclt_map.hpp  nuscenes_local.hpp  nuscenes_map.hpp  nuscenes_node.hpp  util.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/share/sim_local/: package.bash  package.zsh
launch/: frame_dumper.launch.py  local_main.launch.py  localization_launch.py  map_combined.launch.py  map_main.launch.py
log/: latest_build
src/: LinK3D_extractor.cpp  Particle_filter.cpp  frame_dumper.cpp  kdtree.cpp  localizationMain.cpp  localization_node.cpp  mapMain.cpp  map_combined_node.cpp  map_main.cpp  nclt_local.cpp  nclt_map.cpp  nuscenes_local.cpp  nuscenes_node.cpp  util.cpp  write_csv.cpp
src/Localization/: nclt_local.cpp
src/MapGeneration/: nclt_map.cpp  nuscenes_map.cpp
src/ParticleFilter/: Particle_filter.cpp
src/Util/: LinK3D_extractor.cpp
