<?xml version="1.0"?>
<package format="3">
  <name>sim_local</name>
  <version>0.1.0</version>
  <description>ROS2 port of cim_particle localization node</description>
  <maintainer email="kaiii@example.com">Kaiii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>
</package>